# classify-flight-maneuvers

./: .gitignore  README.md  pyproject.toml
data/: submission.csv  submission_example.csv  test_set.csv  train_set.csv
notebooks/: flight_maneuver_classification.ipynb  flight_maneuver_eda.ipynb  flight_maneuver_submission.ipynb  flight_maneuver_training.ipynb
output/: best_model.pkl  submission.csv  training_results.json
utils/: __init__.py  features.py
