[project]
name = "classify-flight-maneuvers"
version = "0.1.0"
description = "Flight maneuver classification task"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1.3",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.9",
    "ipykernel>=6.27.1",
    "xgboost>=2.0.3",
    "lightgbm>=4.1.1",
]
